System Information
Operating system: Linux-5.4.0-47-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100
Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-21 08:00, hash: rB213445e38969
Short description of error
Sometimes when linking in a collection from another file, one of the objects in it may not be appear. This is because when saving the file that the collection is begin linked from, the object was still in sculpt mode while using a multires modifier.
When linking them as individual objects it works fine.
Exact steps for others to reproduce the error
- Duplicate the default cube 2 times
- Add a multires modifier on one of them and subdivide
- Enter sculpt mode on that object and save the file
- Open a new file and link in the collection that contains the 3 default cubes (As an instance or a collection. Both have the same result)
- The object that was in sculpt mode is missing all geometry