Fix T81027: Multires objects in sculpt mode can't be linked via collections.

Just clear all non-object mode flags from linked objects at read time.

Reviewers: brecht

Subscribers: